src/style.css
@import './css/reset.css';
@import './css/vars.css';
@import './css/cssemile.css';

html {
  box-sizing: border-box;
  overflow: visible;
  font-family: Helvetica, Arial, sans-serif;

  width: 100%;
}

/* stylelint-disable */
*,
*::before,
*::after {
  box-sizing: inherit;
}
/* stylelint-enable */

body {
  font-family: var(--font);
  background-color: #393e5b;
}

li {
  line-height: 1.8;
}

.container {
  width: 100vw;
  height: 100vh;
  /* background-color: #393e5b;
  background-image: url("assets/images/mobileBackground1.jpg");
  background-size: ;
  background-size: 20rem 60rem;
  background-repeat: no-repeat; */
  position: relative;
  background-image: url("assets/images/mobileBackground1.png");
  background-repeat:no-repeat;
  background-size:100% 100vh;
}
a{
  text-decoration: none;
}

.storetitle {
  overflow: visible;
  width: auto;
}


.demo-list {
  margin-top: var(--spacerBig);
  text-transform: capitalize;
}


.titleImage{
  height: auto;
  margin-top: 1rem;
}

.storeStyle {
  background-color: whitesmoke;
  border: 2pt solid #393e5b;
  border-radius: 15px;
  height: 14rem;
  width: 40%;
  min-width: 15rem;
  max-width: 40rem;
  text-align: center;

  margin: 0 auto;
  
}

.lbl {
  width: 100px;
  white-space: nowrap;
  font-size: 1.375rem;
  font-family: henderson-slab-basic,serif;
  font-weight: 600;
  font-style: normal;
  margin-left: 20rem;
  margin-top: 3rem;
}

.labelStyling{
  margin-left: 2rem;
  margin-top: 5rem;
}

.storeParagraph{
  color: #393e5b;
  margin: auto;
  margin-top: 8rem;
  margin-bottom: 2rem;

  width: 20rem;

  font-weight: 800;
  font-size: 1.4rem;
}

.store1 {
  height: 4rem;
  background-color: #393e5b;
}

.storeformcontent{
  height: 100%;
  text-align: center;
}

.storeWelcomeMessage{
  font-size: 1.8125rem;
  font-weight: 700;
  color: #EFDFB8;
/*   margin-left: -8rem;
 */  margin-top: 1.5rem;
}

.storeInput{
  background-color: whitesmoke;
  border: 2pt solid #393e5b;
  border-radius: 15px;
  width: 65%;
  height: 2rem;

  margin: auto;
  display: block;
  margin-top: 0.5rem;

}

.storeSubmitButton{
  border-radius: 10px;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 1.1rem;
  color: whitesmoke;
  background-color: #393e5b;

  height: 2rem;
  width: 10rem;

  margin-top: 0.5rem;
}

.storeRadioButton {
  width: 100%;
  margin-left: 1rem;
  margin-top: 1.5rem;
}

.frm {
  display: inline-block;
}


/*menu page*/

.menu__container{
  background-color: #393e5b;
  height: 100%;
  text-align: center;
}

.menu__subtitle{
  font-size: 1.5rem;
  font-weight: 700;
  color: #EFDFB8;

  margin-top: 1rem;
}

.menu__paragraph{
  font-size: 1.1rem;
  color: #EFDFB8;
  margin-top: 1rem;
  width: 20rem;
  margin: auto;
  margin-top: 1rem;
}

.list__button{
  width: 17rem;
  height: 9rem;
  background-color: #F5401D;

  border-radius: 25px;
  margin: auto;
  margin-top: 2rem;
}

.list__button p{
  margin-top: 1rem;
  font-size: 1.8rem;
  font-weight: 800;
  color: #393e5b;
  text-decoration: none;

  padding-top: 1rem;
}

.list__button img{
  margin-top: 1rem;
}

.products__button{
  width: 17rem;
  height: 9rem;
  background-color: #FFA957;

  border-radius: 25px;
  margin: auto;
  margin-top: 1.5rem;
}

.products__button p{
  margin-top: 1rem;
  font-size: 1.8rem;
  font-weight: 800;
  color: #393e5b;
  text-decoration: none;

  padding-top: 1rem;
}

.products__button img{
  margin-top: 1rem;
  width: 3rem;
}

.secondary__buttons{ 
  display: grid;
  grid-template-columns: 1fr 1fr; 
  grid-template-rows: 1fr;
  
  margin-top: 2rem;
}

.discounts__button{
  grid-area: 2/1/2/2;
  background-color: #F5401D;
  width: 8rem;
  height: 6rem;
  margin: auto;
  border-radius: 25px;
  
  margin-right: 0.5rem;
}

.discounts__button img {
  margin-top: 1.5rem;
}



.discounts__title{
  width: 8rem;
  color: #EFDFB8;
  font-weight: 800;
  font-size: 1.5rem;
  
  margin-right: 0.5rem;
  margin-left: auto;
  margin-bottom: 1rem;
}

.recipes__title{
  width: 8rem;
  color: #EFDFB8;
  font-weight: 800;
  font-size: 1.5rem;
  
  margin-right: 3rem;
  margin-bottom: 1rem
}

.recipes__button{
  grid-area: "recipes";
  background-color:  #FFA957;
  width: 8rem;
  height: 6rem;
  margin-left: 0.5rem;
  border-radius: 25px;
}

.recipes__button img {
  margin-top: 1.5rem;
}

.settings__button{
  margin-top: 4rem;
}


@media only screen and (min-width: 760px) {

  .menu__container{
    background-image: url("assets/images/backgroundHamburger.svg");
    background-repeat: no-repeat;
    background-position: 140% 5%;
    background-size: 22rem;
  }

  /* .menu__title{
    width: 40rem;
  } */

  .titleImage{
    width: 43rem;
    padding-right: 8rem;
  }

  .storeTitleImage{
    width: 43rem;
  }

  .menu__paragraph {
    width: 43rem;
    font-size: 1.5rem;
    padding-right: 10rem;
  }
  
  .menu__subtitle {
    width: 45rem;
    font-size: 1.8rem;
    margin: 0 auto;
    padding-right: 10rem;
    margin-top: 2rem;
    margin-bottom: 2rem;
  }

  .main__buttons{
    text-align: center;
    display: flex;
    margin-top: 5rem;
  }

  .secondary__buttons{
    margin-top: 0rem;
  }


  .list__button{
    margin: auto;
    margin-right: 1rem;
    height: 12rem;
  }

  .products__button{
    margin: auto;
    margin-left: 1rem;
    height: 12rem;
  }

  .discounts__button {
    width: 17rem;
    height: 9rem;
    margin-right: 1rem;

  }

  .recipes__button {
    width: 17rem;
    height: 9rem;
    margin-left: 1rem;

  }

  .list__button img{
    margin-top: 2.2rem;
    width: 5rem;
  }

  .products__button img{
    margin-top: 1.8rem;
    width: 5rem;
  }

  .discounts__button img{
    margin-top: 2rem;
    width: 5rem;
  }

  .recipes__button img{
    margin-top: 2.2rem;
    width: 5rem;
  }

  .discounts__title {
    visibility: hidden;  
  }

  .recipes__title {
    visibility: hidden;  
  }



  .storeWelcomeMessage{
    margin-top: 8rem ;
    font-size: 2rem;
    color: #F5401D;
  }

  .storeParagraph{
    margin-top: 1rem;
  }

  

  .storeRadioButton{
    margin-left: 3rem;  }


}

@media only screen and (min-width: 850px) {

  .menu__container{
    background-image: url("assets/images/backgroundHamburger.svg");
    background-repeat: no-repeat;
    background-position: 130% 5%;
    background-size: 22rem;
  }

}

@media only screen and (min-width: 900px) {

  .menu__container{
    background-image: url("assets/images/backgroundHamburger.svg");
    background-repeat: no-repeat;
    background-position: 130% 5%;
    background-size: 22rem;
  }

  .titleImage{
    padding: 0;
    width: 35rem;
  }

  .menu__subtitle{
    padding: 0;
  }

  .menu__paragraph{
    padding: 0;
    width: 40rem;
  }
}

@media only screen and (min-width: 900px) {
  .menu__container{
    background-image: url("assets/images/backgroundHamburger.svg");
    background-repeat: no-repeat;
    background-position: 140% 5%;
    background-attachment: fixed;
    background-size: 22rem;
  }

}

